# PitchGrid-Continuum-Bridge

./: .gitignore  Cargo.toml  LICENSE.txt  Midi port black on red 512.icns  README.md  build.rs  make_junction.js
.cargo/: config.toml
.claude/: settings.local.json
app_info/: Cargo.toml
app_info/src/: lib.rs
docs/: slint-lsp-vivi-setup.md
scalatrix/include/: scalatrix.hpp
src/: continuum_midi_batch.rs  continuum_protocol.rs  controller.rs  device_strategy.rs  error_notifier.rs  global.rs  i_continuum_protocol.rs  i_midi.rs  i_midi_manager.rs  i_osc.rs  i_settings.rs  i_tuner.rs  i_ui_methods.rs  lib.rs  main.rs  manager.rs  midi.rs  midi_data.rs  midi_data_wrong.rs  midi_manager.rs  midi_message_batch.rs  midi_ports.rs  midi_sender.rs  midi_sending.rs  midi_static.rs  osc.rs  port_strategy.rs  presentation.rs  presenter.rs  settings.rs  system_paths.rs  tuner.rs  tuning_params.rs  tuning_update_watchdog.rs  ui_methods.rs
src/midi/: midi_refs.rs  midi_statics.rs  statics.rs
src/midi_manager/: midi_refs.rs
src/tuner/: i_tuner.rs  tuner_refs.rs  tuner_statics.rs
tests/: Cargo.toml  controller_tests.rs  mock_continuum_protocol.rs  mock_io.rs  mock_midi.rs  mock_midi_manager.rs  mock_midi_sender.rs  mock_midi_sending.rs  mock_osc.rs  mock_settings.rs  mock_tuner.rs  mock_ui_methods.rs  presenter_tests.rs  settings_tests.rs  temp_path_finder.rs  test_tunings.rs  tuner_tests.rs
tests/settings_tests/: Cargo.toml
tests/settings_tests/src/: lib.rs
ui/: about_dialog.slint  about_window.slint  globals.slint  index.slint  main_window.slint  styling.slint
ui/components/: message_text.slint  midi_io.slint  nice_menu.slint  text.slint
