[package]
name = "pitchgrid_continuum"
description = "Pitchgrid-Continuum Bridge"
version = "0.13.0"
authors = ["Simon O'Rorke"]
license = "MIT OR Apache-2.0"
edition = "2024"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.194"
directories = "6.0.0"
rosc = "0.11.4"
round = "0.1.2"
midir = "0.10.3"
midly = "0.5.3"
open = "5.3.3"
rayon = "1.11.0"
serde = "1.0.228"
toml = "1.0.0"
slint = "1.14.1"

[build-dependencies]
cxx-build = "1.0.194"
slint-build = "1.15.1"
vivi_ui = "0.2.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
