[workspace]
members = ["app_info"]
resolver = "2"

[workspace.package]
description = "Pitchgrid-Continuum Bridge"
license = "MIT or Apache-2.0"
version = "0.14.0"

[package]
name = "pitchgrid_continuum"
description.workspace = true
license.workspace = true
version.workspace = true
authors = ["Simon O'Rorke"]
edition = "2024"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_info = { path = "app_info" }
cxx = "1.0.194"
directories = "6.0.0"
rosc = "0.11.4"
round = "0.1.2"
midir = "0.10.3"
midly = "0.5.3"
open = "5.3.3"
rayon = "1.11.0"
serde = "1.0.228"
toml = "1.0.0"
slint = "1.14.1"

[build-dependencies]
app_info = { path = "app_info" }
cxx-build = "1.0.194"
slint-build = "1.15.1"
vivi_ui = "0.2.0"

[target.'cfg(windows)'.build-dependencies]
# Using embed-resource instead of the more popular winres
# for application icon and exe file propertieds because
# winres puts an oblique before the apostrophe in my name.
# It's a known shortcoming of winres to always 'escape' an apostrophe.
embed-resource = "3.0.8"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
